--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "stripe": "^12.18.0"
   }
 }
